src/App.css
html,
body,
#root,
.App {
    margin: 0;
    font-family: "Plus Jakarta Sans";
}

.App {
    background-size: cover;
    background-color: #101010;
    color: #FFFAFA;;
    padding-left: 14.063rem;
    padding-right: 14.063rem;
    padding-top: 20rem;

}

/* tablet */
@media only screen and (max-width: 575px) {
    .App {
        padding-left: 20px;
        padding-right: 20px;
    }
}

